--- a/package.json
+++ b/package.json
@@ -12,10 +12,12 @@
   "private": true,
   "dependencies": {
     "@angular/animations": "~12.2.0",
+    "@angular/cdk": "^12.2.13",
     "@angular/common": "~12.2.0",
     "@angular/compiler": "~12.2.0",
     "@angular/core": "~12.2.0",
     "@angular/forms": "~12.2.0",
+    "@angular/material": "^12.2.13",
     "@angular/platform-browser": "~12.2.0",
     "@angular/platform-browser-dynamic": "~12.2.0",
     "@angular/router": "~12.2.0",
@@ -24,6 +26,8 @@
     "@fortawesome/fontawesome-svg-core": "^1.2.35",
     "@fortawesome/free-solid-svg-icons": "^5.15.3",
     "bootstrap": "^5.1.3",
+    "d3": "^7.1.1",
+    "gojs": "^2.1.53",
     "jw-angular-pagination": "^1.2.0",
     "ngx-pagination": "^5.1.1",
     "rxjs": "~6.6.0",
@@ -34,6 +38,7 @@
     "@angular-devkit/build-angular": "~12.2.12",
     "@angular/cli": "~12.2.12",
     "@angular/compiler-cli": "~12.2.0",
+    "@types/d3": "^7.1.0",
     "@types/jasmine": "~3.8.0",
     "@types/node": "^12.11.1",
     "jasmine-core": "~3.8.0",
